--- a/app/static/css/reply_guy.css
+++ b/app/static/css/reply_guy.css
@@ -803,9 +803,9 @@ html.dark .primary-btn:hover:not(:disabled) {
 }
 
 .loading-icon {
-    font-size: 4rem;
+    font-size: 3rem;
     color: #3B82F6;
-    margin-bottom: 0.25rem;  /* Much closer to text */
+    margin-bottom: 1rem;
 }
 
 html.dark .loading-icon {
