--- a/app/templates/brain_dump/index.html
+++ b/app/templates/brain_dump/index.html
@@ -39,7 +39,10 @@
         
         <div class="notes-list" id="notesList">
             <div class="loading">
-                <div class="spinner"></div>
+                <div class="loading-spinner">
+                    <i class="ph ph-spinner"></i>
+                </div>
+                <div>Loading notes...</div>
             </div>
         </div>
     </aside>
