--- a/app/templates/x_post_editor/index.html
+++ b/app/templates/x_post_editor/index.html
@@ -39,7 +39,9 @@
         
         <div class="drafts-list" id="draftsList">
             <div class="drafts-loading">
-                <div class="drafts-loading-spinner"></div>
+                <div class="drafts-loading-spinner">
+                    <i class="ph ph-spinner"></i>
+                </div>
                 <div>Loading drafts...</div>
             </div>
         </div>
