--- a/app/templates/brain_dump/public_note.html
+++ b/app/templates/brain_dump/public_note.html
@@ -763,7 +763,7 @@
                     statusText.textContent = 'Typing...';
                     break;
                 case 'saving':
-                    icon.className = 'ph ph-circle-notch';
+                    icon.className = 'ph ph-spinner spin';
                     statusText.textContent = 'Saving...';
                     break;
                 case 'saved':
