--- a/app/templates/competitors/index.html
+++ b/app/templates/competitors/index.html
@@ -188,7 +188,7 @@
                 <div class="progress-card">
                     <div class="progress-header">
                         <div class="progress-icon">
-                            <i class="ph ph-chart-line-up"></i>
+                            <i class="ph ph-spinner spin"></i>
                         </div>
                         <h2 class="progress-title">Analyzing Competitors</h2>
                         <p class="progress-subtitle">This may take a moment while we gather and analyze data...</p>
